# DETR3D-Implementation-using-Pytorch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  COMMAND_GUIDE.md  DETR.ipynb  EXPERIMENT_LOG_2026-03-22.md  PAPER_VS_OFFICIAL_REPO_NOTES.md  README.md  SESSION_HANDOFF_2026-03-20.md  SESSION_HANDOFF_2026-03-23.md  eval.py  infer.py  pyproject.toml  requirements.txt  train.py
configs/: base.py  debug_overfit.py  detr3d_r50_nuscenes.py
detr3d/: __init__.py
detr3d/data/: __init__.py  collate.py  nuscenes_dataset.py  sampler.py  transforms.py
detr3d/engine/: diagnostics.py  evaluator.py  hooks.py  trainer.py
detr3d/experiments/: paired_config_confirmation_v1.json  paired_config_search_v1.json
detr3d/models/: __init__.py  checkpoint.py  detr3d.py  grid_mask.py
detr3d/models/heads/: __init__.py  (+1 more)
detr3d/scripts/: benchmark_forward.py  evaluate_checkpoint_series.py  monitor_mlflow_eta.py  overfit_one_batch.py  run_paired_config_search.py  sanity_check.py  tiny_multi_sample_sanity.py  validate_nuscenes.py
detr3d/utils/: box_ops.py  geometry.py  tensor_ops.py
notebooks/: detr3d_e2e_walkthrough.ipynb
tests/: test_cbgs.py  test_checkpoint.py  test_checkpoint_series_evaluator.py  test_cross_attention.py  test_decoder_layer.py  test_diagnostics.py  test_eval_checkpoint.py  test_fpn.py  test_grid_mask.py  test_image_preprocessing.py  test_initialization.py  test_loss.py  test_matcher.py  test_mlflow_eta.py  test_model_forward.py  test_nuscenes_evaluator.py  test_nuscenes_gt_semantics.py  test_paired_config_runner.py  test_train_reproducibility.py  test_trainer.py
(+19 files in other folders)
